--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.PrimeraParcialPA2023" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#397D9C</item>
+        <item name="colorSecondary">#B15675</item>
+        <item name="colorTertiary">#685191</item>
     </style>
 
     <style name="Theme.PrimeraParcialPA2023" parent="Base.Theme.PrimeraParcialPA2023" />
