--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,26 @@
     tools:context=".MainActivity" >
 
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="94dp"
-        android:layout_marginBottom="795dp"
-        android:text="DATOS DEL VEHICULO"
-        android:textSize="20sp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="826dp"
+        android:max="100"
+        android:progress="0" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tipo_vehiculo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -29,7 +36,7 @@
         android:text="Tipo de Vehículo" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/valor_vehiculo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -39,7 +46,7 @@
         android:text="Valor del Vehículo" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/multas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -49,7 +56,7 @@
         android:text="si posee o no multas" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/cedula"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -59,7 +66,7 @@
         android:text="Número de Cédula del Propietario" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/nombre"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -69,7 +76,7 @@
         android:text="Nombres del Propietario" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/placa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -79,7 +86,7 @@
         android:text="Número de placa" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/aniodefabr"
         android:layout_width="146dp"
         android:layout_height="45dp"
         android:layout_alignParentEnd="true"
@@ -89,7 +96,7 @@
         android:text="Año de Fabricación del Vehículo" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/marca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -99,7 +106,7 @@
         android:text="Marca" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -162,16 +169,48 @@
         android:ems="10"
         android:inputType="text" />
 
-    <EditText
-        android:id="@+id/txt_marca"
-        android:layout_width="162dp"
+
+
+
+
+    <RadioGroup
+        android:id="@+id/radioGroupMarca"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="444dp"
-        android:ems="10"
-        android:inputType="text" />
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radioToyota"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Toyota" />
+
+        <RadioButton
+            android:id="@+id/radioSuzuki"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Suzuki" />
+
+        <!-- Agrega más RadioButtons según las marcas que necesitas -->
+    </RadioGroup>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <EditText
         android:id="@+id/txt_color"
