--- a/app/src/main/res/layout/activity_validacion.xml
+++ b/app/src/main/res/layout/activity_validacion.xml
@@ -8,6 +8,37 @@
     tools:context=".validacion">
 
 
+
+
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
